--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,6 @@
-appname = comic-go
-httpport = 1337
+appname = comic-beego
+httpport = 8080
 runmode = dev
 autorender = false
 copyrequestbody = true
-EnableDocs = true
+EnableDocs = false
